test/ui/test/lowering/invalid-unnamed-path-hanger.lushui
use super
use topmost
use other
use self

use topmost.(space self space)

use topmost.(self.(self.thing super))

use exists.(self)
